--- a/src/components/HeroBanner.css
+++ b/src/components/HeroBanner.css
@@ -221,7 +221,7 @@
     left: 0;
     width: 100%;
     height: 20%;
-    background: linear-gradient(to bottom, transparent, black);
+    /* background: linear-gradient(to bottom, transparent, black); */
     z-index: 1;
   }
 
